Adding support for crawling different confluence spaces

--- a/confluence-repository-connector/src/main/native2ascii/org/apache/manifoldcf/crawler/connectors/confluence/common_en_US.properties
+++ b/confluence-repository-connector/src/main/native2ascii/org/apache/manifoldcf/crawler/connectors/confluence/common_en_US.properties
@@ -14,7 +14,7 @@
 # limitations under the License.
 
 ConfluenceRepositoryConnector.Server=Server
-ConfluenceRepositoryConnector.Space=Space
+ConfluenceRepositoryConnector.Spaces=Spaces
 
 ConfluenceRepositoryConnector.ProtocolColon=Protocol:
 ConfluenceRepositoryConnector.HostColon=Host:
@@ -28,3 +28,11 @@ ConfluenceRepositoryConnector.HostMustNotIncludeSlash=Confluence host must not i
 ConfluenceRepositoryConnector.PortMustBeAnInteger=Confluence port must be an integer
 ConfluenceRepositoryConnector.PathMustNotBeNull=Confluence path must not be null
 ConfluenceRepositoryConnector.PathMustBeginWithASlash=Confluence path must begin with a '/' character
+
+ConfluenceRepositoryConnector.NoSpacesConfigured=No spaces configured. All spaces will be crawled
+
+ConfluenceRepositoryConnector.Add=Add
+ConfluenceRepositoryConnector.AddSpace=Add Space
+ConfluenceRepositoryConnector.Delete=Delete
+ConfluenceRepositoryConnector.DeleteSpace=Delete space #
+ConfluenceRepositoryConnector.TypeInASpace=Type in a space
