--- a/confluence-repository-connector/src/main/native2ascii/org/apache/manifoldcf/crawler/connectors/confluence/common_en_US.properties
+++ b/confluence-repository-connector/src/main/native2ascii/org/apache/manifoldcf/crawler/connectors/confluence/common_en_US.properties
@@ -15,6 +15,8 @@
 
 ConfluenceRepositoryConnector.Server=Server
 ConfluenceRepositoryConnector.Spaces=Spaces
+ConfluenceRepositoryConnector.Pages=Pages
+
 
 ConfluenceRepositoryConnector.ProtocolColon=Protocol:
 ConfluenceRepositoryConnector.HostColon=Host:
@@ -36,3 +38,5 @@ ConfluenceRepositoryConnector.AddSpace=Add Space
 ConfluenceRepositoryConnector.Delete=Delete
 ConfluenceRepositoryConnector.DeleteSpace=Delete space #
 ConfluenceRepositoryConnector.TypeInASpace=Type in a space
+
+ConfluenceRepositoryConnector.ProcessAttachments=Process Attachments
