Changing path and modifying client accordingly

--- a/confluence-repository-connector/src/main/native2ascii/org/apache/manifoldcf/crawler/connectors/confluence/common_en_US.properties
+++ b/confluence-repository-connector/src/main/native2ascii/org/apache/manifoldcf/crawler/connectors/confluence/common_en_US.properties
@@ -21,7 +21,7 @@ ConfluenceRepositoryConnector.Pages=Pages
 ConfluenceRepositoryConnector.ProtocolColon=Protocol:
 ConfluenceRepositoryConnector.HostColon=Host:
 ConfluenceRepositoryConnector.PortColon=Port:
-ConfluenceRepositoryConnector.PathColon=REST API path:
+ConfluenceRepositoryConnector.PathColon=Path:
 ConfluenceRepositoryConnector.UsernameColon=Username:
 ConfluenceRepositoryConnector.PasswordColon=Password:
 
