Confluence Authority Connector configuration tab with i18n

--- a/confluence-authority-connector/src/main/native2ascii/org/apache/manifoldcf/authorities/authorities/confluence/common_en_US.properties
+++ b/confluence-authority-connector/src/main/native2ascii/org/apache/manifoldcf/authorities/authorities/confluence/common_en_US.properties
@@ -12,3 +12,18 @@
 # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 # See the License for the specific language governing permissions and
 # limitations under the License.
+
+ConfluenceAuthorityConnector.Server=Server
+
+ConfluenceAuthorityConnector.ProtocolColon=Protocol:
+ConfluenceAuthorityConnector.HostColon=Host:
+ConfluenceAuthorityConnector.PortColon=Port:
+ConfluenceAuthorityConnector.PathColon=JSON-RPC API path:
+ConfluenceAuthorityConnector.UsernameColon=Username:
+ConfluenceAuthorityConnector.PasswordColon=Password:
+
+ConfluenceAuthorityConnector.HostMustNotBeNull=Confluence host must not be null
+ConfluenceAuthorityConnector.HostMustNotIncludeSlash=Confluence host must not include a '/' character
+ConfluenceAuthorityConnector.PortMustBeAnInteger=Confluence port must be an integer
+ConfluenceAuthorityConnector.PathMustNotBeNull=Confluence path must not be null
+ConfluenceAuthorityConnector.PathMustBeginWithASlash=Confluence path must begin with a '/' character
