Updating README.md file

--- a/connector/src/main/native2ascii/org/apache/manifoldcf/authorities/authorities/confluence/common_en_US.properties
+++ b/connector/src/main/native2ascii/org/apache/manifoldcf/authorities/authorities/confluence/common_en_US.properties
@@ -18,7 +18,7 @@ ConfluenceAuthorityConnector.Server=Server
 ConfluenceAuthorityConnector.ProtocolColon=Protocol:
 ConfluenceAuthorityConnector.HostColon=Host:
 ConfluenceAuthorityConnector.PortColon=Port:
-ConfluenceAuthorityConnector.PathColon=JSON-RPC API path:
+ConfluenceAuthorityConnector.PathColon=Path:
 ConfluenceAuthorityConnector.UsernameColon=Username:
 ConfluenceAuthorityConnector.PasswordColon=Password:
 
